--- a/lang/gu.json
+++ b/lang/gu.json
@@ -159,5 +159,6 @@
   "Ads": "જાહેરાતો",
   "IDIsExist": "આઈ.ડી અસ્તિત્વમાં છે",
   "MostVisitedSite": "સૌથી વધુ જોવાયેલી સાઇટ",
-  "Thisuserhasnopermissiontologin": "આ વપરાશકર્તાને લોગ ઈન કરવાની પરવાનગી નથી"
+  "Thisuserhasnopermissiontologin": "આ વપરાશકર્તાને લોગ ઈન કરવાની પરવાનગી નથી",
+  "CancelBooking": "કેન્સલ બુકિંગ"
 }
