--- a/lang/hi.json
+++ b/lang/hi.json
@@ -162,5 +162,6 @@
   "Ads": "विज्ञापन",
   "IDIsExist": "आई.डी अस्तित्ववादी है",
   "MostVisitedSite": "सबसे अधिक देखी गई साइट",
-  "Thisuserhasnopermissiontologin": "इस उपयोगकर्ता को लॉग इन करने की कोई अनुमति नहीं है"
+  "Thisuserhasnopermissiontologin": "इस उपयोगकर्ता को लॉग इन करने की कोई अनुमति नहीं है",
+  "CancelBooking": "कैंसल बुकिंग"
 }
