--- a/lang/gu.json
+++ b/lang/gu.json
@@ -178,5 +178,14 @@
   "Pay": "ચૂકવો",
   "AddBroker": "બ્રોકર ઉમેરો",
   "NoData": "કોઈ ડેટા નથી",
-  "AllData": "બધા ડેટા"
+  "AllData": "બધા ડેટા",
+  "Payment": "ચુકવણી",
+  "Reason": "કારણ",
+  "AllEMI": "બધા ઇ.એમ.આઈ",
+  "Delay": "વિલંબ",
+  "Next": "આગળનો",
+  "Previous": "પાછલો",
+  "EMI" :"ઇ.એમ.આઈ",
+  "Vrajraj": "વ્રજરાજ",
+  "Corporation": "કોર્પોરેશન"
 }
