--- a/lang/hi.json
+++ b/lang/hi.json
@@ -177,6 +177,13 @@
   "AddBroker": "ब्रोकर ऐड करो",
   "NoData": "कोई डाटा उपलब्ध नहीं है",
   "AllData": "सभी डेटा",
-  "Payment": "भुगतान"
-
+  "Payment": "भुगतान",
+  "Reason": "कारण",
+  "AllEMI": "सभी ई.एम.आई",
+  "Delay": "विलंब",
+  "Next": "अगला",
+  "Previous": "पहलेका",
+  "EMI" :"ई.एम.आई",
+  "Vrajraj": "व्रजराज",
+  "Corporation": "कॉर्पोरेशन"
 }
