--- a/lang/gu.json
+++ b/lang/gu.json
@@ -1,6 +1,6 @@
 {
   "first_string": "નમસ્તે અભય",
-  "second_string": "સ્વાગત છે",
+  "Welcome": "સ્વાગત છે",
   "Flats": "ફ્લેટ્સ",
   "Floors": "માળ",
   "Shops": "દુકાનો",
