--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,6 +1,6 @@
 {
   "first_string": "नमस्ते अभय",
-  "second_string": "स्वागत हे",
+  "Welcome": "स्वागत हे",
   "Flats": "फ्लैटों",
   "Floors": "मंजिलों",
   "Shops": "दुकानें",
